fixed transform bug in ff and added lables positioning

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <div id="division">
       <div class="dot"></div>
     </div>
-    <svg id="gauge">
-      <path id="gauge_grey" fill="none" stroke-width="20"/>
-      <path id="gauge_yellow" fill="none" stroke-width="20"/>
-      <path id="gauge_red" fill="none" stroke-width="20"/>
-      <polygon id="gauge_arrow" points="0,155 155,150 155,160" style="fill:lime;stroke:purple;stroke-width:0" />
+    <svg id="gauge" x="0px" y="0px">
+      <path id="gauge_grey" fill="none" stroke-width="10"/>
+      <path id="gauge_yellow" fill="none" stroke-width="10"/>
+      <path id="gauge_red" fill="none" stroke-width="10"/>
+    </svg>
+
+
+    <svg x="0px" y="0px" width="310px" height="310px" id="gauge_arrow" >
+        <polygon x="-50" y="-50" points="0,155 155,150 155,160" style="fill:lime;stroke:purple;stroke-width:0" />
     </svg>
 
   </div>
