added drawing for all elements

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
   <div id="gauge_wrap">
 
-    <svg x="0px" y="0px" width="310px" height="310px" id="gauge_arrow" >
-        <polygon x="-50" y="-50" points="0,155 155,150 155,160" style="fill:lime;stroke:purple;stroke-width:0" />
+    <!-- <svg x="0px" y="0px" width="320px" height="320px" id="gauge__arrow" >
+        <polygon id="gauge__polygon" points="" />
     </svg>
     <div id="division">
-      <div class="dot"></div>
+      <span class="dot"></span>
     </div>
     <svg id="gauge" x="0px" y="0px">
-      <path id="gauge_grey" fill="none" stroke-width="10"/>
-      <path id="gauge_yellow" fill="none" stroke-width="10"/>
-      <path id="gauge_red" fill="none" stroke-width="10"/>
-    </svg>
+      <circle id="gauge__center" r="7" />
+      <path id="gauge__grey" fill="none" stroke-width="3"/>
+      <path id="gauge__yellow" fill="none" stroke-width="3"/>
+      <path id="gauge__red" fill="none" stroke-width="3"/>
+    </svg> -->
 
 
 
