reorganized code and added outside/inside dots positioning

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-  <div id="gauge_wrap">
+  <div class="" id="test"></div>
+
+  <div class="gauge__wrap">
 
     <!-- <svg x="0px" y="0px" width="320px" height="320px" id="gauge__arrow" >
         <polygon id="gauge__polygon" points="" />
@@ -23,11 +25,11 @@
     </svg> -->
 
 
-
-
   </div>
 
 
-  <script type="text/javascript" src="script.js"></script>
+
+  <script type="text/javascript" src="gauge.js"></script>
+  <script type="text/javascript" src="example.js"></script>
 
 </body>
