--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -6,26 +6,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-  <div class="" id="test"></div>
-
-  <div class="gauge__wrap">
-
-    <!-- <svg x="0px" y="0px" width="320px" height="320px" id="gauge__arrow" >
-        <polygon id="gauge__polygon" points="" />
-    </svg>
-    <div id="division">
-      <span class="dot"></span>
-    </div>
-    <svg id="gauge" x="0px" y="0px">
-      <circle id="gauge__center" r="7" />
-      <path id="gauge__grey" fill="none" stroke-width="3"/>
-      <path id="gauge__yellow" fill="none" stroke-width="3"/>
-      <path id="gauge__red" fill="none" stroke-width="3"/>
-    </svg> -->
-
-
-  </div>
 
 
 
