--- a/example/index.html
+++ b/example/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Gauge</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../src/style.css">
 </head>
 <body>
 
+  <div id="gauge"></div>
 
+  <script type="text/javascript" src="../src/gauge.js"></script>
 
-  <script type="text/javascript" src="gauge.js"></script>
   <script type="text/javascript" src="example.js"></script>
 
 </body>
