--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Gauge</title>
-  <link rel="stylesheet" type="text/css" href="../src/style.css">
+  <link rel="stylesheet" type="text/css" href="../src/gauge.css">
 </head>
 <body>
 
