--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <p>Для добавления в DOM-элемент необходимо указать его id</p>
     <pre>gauge = new gauge({<br>  block: 'blockId'<br>})</pre>
     <h2>Параметры</h2>
-    <p>Набор лейблов для отображения и количество промежуточных точке</p>
+    <p>Набор лейблов для отображения и количество промежуточных точек</p>
     <pre>gauge = new gauge({<br>  tags: ['Tag', 'Second Tag', 'Third Tag', 'Last Tag'] <br>  divisionSep: 19<br>})</pre>
     <div id="gauge_one"></div>
 
