--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <div class="page">
 
     <h1>gauge.js</h1>
+    <img src="gauge.png" alt="Gauge">
     <p>Простая библиотека для отображения значений на шкале.</p>
 
     <h2>Установка</h2>
